fixed navigation and cropped image

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
 }
 
 .navbar-custom {
-  background: transparent;
+  background: white;
   font: 300 1em/1.5em 'Lato';
   font: Ultra-Light 300 1em/1.5em 'Lato';
   font: Ultra-Light 300 1em/1.5em 'Lato', sans-serif;
@@ -76,7 +76,7 @@ body {
 
 @media (min-width: 768px) {
   .navbar-custom {
-    padding: 8px 0;
+    padding: 1px 0;
     -webkit-transition: padding 0.3s;
     -moz-transition: padding 0.3s;
     transition: padding 0.3s;
@@ -156,10 +156,10 @@ section.module.parallax-4 h1 {
 }
 
 section.module.parallax-1 {
-  min-height: 100%;
+  /*min-height: 100%;*/
   background-image: url('../img/me.jpg');
   background-size: cover;
-  box-shadow:inset 0 0 0 2000px rgba(255,255,255,0.1);
+  /*box-shadow:inset 0 0 0 2000px rgba(255,255,255,0.1);*/
 }
 
 section.module.parallax-2 {
